# SciSeek

./: .gitignore  CHANGELOG.md  DEVELOPMENT_LOG.md  FINAL_REPORT.md  QUICKSTART.md  README.md  RELEASE_REPORT_2026-06-30.md  TASKS.md  pyproject.toml  requirements.txt  research_searcher.py  sciseek.spec  test_research_searcher.py
.github/workflows/: ci.yml
config/: default.yml
database/: cache.py
docs/: architecture.md  cli-reference.md  known_issues.md  packaging.md  privacy.md  search-syntax.md  troubleshooting.md  user-guide.md
extractors/: __init__.py  base.py  docx.py  factory.py  markdown_text.py  pdf.py
sciseek/: __init__.py  app.py  cli.py
sciseek/core/: __init__.py  events.py  exceptions.py  models.py  service.py  settings.py
sciseek/database/: __init__.py  store.py
sciseek/exporters/: __init__.py  writers.py
sciseek/extractors/: __init__.py  adapters.py
sciseek/gui/: dialogs.py  main.py  main_window.py  models.py  workers.py
sciseek/gui/widgets/: __init__.py
sciseek/searchers/: __init__.py  boolean_parser.py  engine.py
scripts/: build_linux.sh  build_windows.ps1  run_dev.ps1  run_dev.sh  smoke_test.py
searchers/: __init__.py  basic.py
tests/: test_boolean_parser.py  test_cli_compat.py  test_gui_smoke.py  test_search_engine.py  test_service_integration.py
utils/: logger.py  path_resolver.py  validators.py
