[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciseek"
version = "0.2.0"
description = "Local scientific document search CLI + GUI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pypdf>=4.0.0",
  "python-docx>=0.8.11",
  "pyyaml>=6.0",
  "platformdirs>=4.2.0",
  "PySide6>=6.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-qt>=4.4",
  "pytest-cov>=5.0",
  "ruff>=0.5",
  "mypy>=1.10",
  "pyinstaller>=6.10",
]

[project.scripts]
sciseek = "sciseek.cli:main"
sciseek-gui = "sciseek.gui.main:run_gui"

[tool.setuptools]
packages = ["sciseek", "sciseek.core", "sciseek.database", "sciseek.exporters", "sciseek.extractors", "sciseek.searchers", "sciseek.gui", "sciseek.gui.widgets"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
follow_imports = "skip"
